# dz2_cpp

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  testfile.txt
dynamic_library/: dynamic_lib.c  dynamic_lib.h
dynamic_test/: CMakeLists.txt  test.cpp
include/: interface.h
src/: main.c
static_library/: static_lib.c  static_lib.h
static_test/: CMakeLists.txt  test.cpp
